--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/brenj/private-blockchain-ws#readme",
   "dependencies": {
     "express": "^4.16.3",
-    "npm": "^6.4.1"
+    "npm": "^6.4.1",
+    "private-blockchain": "git://github.com/brenj/private-blockchain.git"
   }
 }
